# laufey_alchemy_bot

./: .gitignore  AGENTS.md  CHANGES.md  README.md  additional_rules_alchemy.txt  alchemy.db  all_effects_df.pkl  effect_categories_v4.csv  effect_suppression.py  effect_suppression_v4.py  ingredient_effect_categories_v4.csv  ingredients_v4.json  main.py  pyproject.toml  recipes_v4.md  reset_db.py  rules_alchemy.txt  young_alchemy.csv  Алхимия_подавление_и_категоризация_v4.docx
.github/workflows/: ci.yml
alchemy_bot_data_v5/: README_alchemy_bot_v5.md  alchemy_bot_mappings_and_suppression_v5.docx  build_v5_from_xlsx.py  effect_categories_v5.csv  effect_suppression_v5.py  ingredient_effect_categories_v5.csv  ingredient_effects_v5.csv  ingredients_v5.json  suppression_rules_v5.json
alchemy_tools/: db_fill.py  db_setup.py  db_wrapper.py  effects_resolution.py  effects_tools.py  evaluate_ingredients.py  find_ingredients.py  main.py  recipes.py  user_ingredients.py  user_settings.py  utils.py  v4_recipe_search.py  v5_data.py  v5_recipe_search.py
analyze_notebooks/: analyze_effects.ipynb  evaluate_effects_algorithm_a.ipynb  evaluate_effects_algorithm_b.ipynb  mapping_effects.ipynb  test.ipynb
tests/: test_effect_search.py  test_evaluate.py  test_user_settings.py  test_utils.py  test_v4_recipe_search.py  test_v5_recipe_search.py
