[tool.poetry]
name = "laufey-alchemy-bot"
version = "0.1.0"
description = ""
authors = ["Whisperwind"]
readme = "README.md"
packages = [{ include = "alchemy_tools" }]

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^21.8"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
